# autopep723

./: .coverage  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  Makefile  README.md  autopep723-shebang-magic.en.md  coverage.xml  magic.py  prueba.py  pyproject.toml  scrape_results.json  shtools.py  test_args.py
.github/workflows/: ci.yml
docs/: api.md  conf.py  contributing.md  examples.md  how-it-works.md  index.md  usage.md
examples/: ml_analysis.py  shebang_example.py  simple_demo.py  web_scraper.py
src/autopep723/: __init__.py  cli.py  commands.py  logger.py  validation.py
tests/: __init__.py  conftest.py  test_autopep723.py  test_cli.py  test_logger.py  test_validation.py
